[tool.poetry]
name = "basic-statistics"
version = "0.1.0"
description = ""
authors = ["Vadim Barashkov <vadimdominik2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
